# calc-caller

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  pyproject.toml  train.py
eval/: eval_local.py
eval/omnicalc/: calculators.py  tools.py
eval/results/: accuracy.txt
scripts/: build_training_data.py
src/: executor.py  prompts.py  schemas.py
