[project]
name = "calc-caller"
version = "0.1.0"
description = "MedGemma QLoRA fine-tuning for clinical calculator tool-use"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core training stack
    "trl>=0.13",
    "datasets==4.3.0",  # pinned: unsloth breaks on >=4.5
    "transformers>=4.47",
    "peft>=0.14",
    "accelerate>=1.2",
    "bitsandbytes>=0.44",
    # Data
    "pandas>=2.2",
    # HF ecosystem
    "huggingface-hub>=0.27",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    "unsloth>=2026.2",
]

# ── Unsloth must be installed separately because the wheel is CUDA-version
# specific.  After `uv sync`, run:
#
#   uv pip install "unsloth[cu124-torch260]"
#
# Replace cu124/torch260 to match `nvcc --version` / torch.__version__:
#   cu118-torch250, cu121-torch240, cu124-torch260, etc.
#
# Verify with: python -c "import unsloth; print(unsloth.__version__)"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
